objects/ssot__RgltyCodeRegClauseVer__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Regulatory Code Regulation Clause Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulationClVerId__c</fullName>
        <label>Regulation Clause Version</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulatoryCodeId__c</fullName>
        <label>Regulatory Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731659294120_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RgltyCodeRegClauseVer_RegulatoryCode_rel</label>
        <referenceTo>ssot__RegulatoryCode__dlm</referenceTo>
        <relationshipLabel>RgltyCodeRegClauseVer_RegulatoryCode_rel</relationshipLabel>
        <relationshipName>rel_1731659294120_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731659307330_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RgltyCodeRegClauseVer_RegulationClVe_rel</label>
        <referenceTo>ssot__RegulationClauseVersion__dlm</referenceTo>
        <relationshipLabel>RgltyCodeRegClauseVer_RegulationClVe_rel</relationshipLabel>
        <relationshipName>rel_1731659307330_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>